--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -9,15 +9,6 @@
           <a href="#" class="btn btn-success">Order Now</a>
         </div>
       </div>
-
-      <div class="card" style="width: 20rem;">
-          <img class="card-img-top" src="http://nebula.wsimg.com/661b172bf0902215cb52e03a45a09a96?AccessKeyId=5150C40ECAD97B397F21&disposition=0&alloworigin=1" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Order Online!</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-success">Go somewhere</a>
-          </div>
-        </div>
     </div>
 
     <div class="col-8">
@@ -46,6 +37,17 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-4">
+      <h4 style="color: white;">Like us on Facebook!</h4>
+      <div class="fb-page" data-href="https://www.facebook.com/Mariosofmahopac/" data-width= "318px"
+        data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" 
+        data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Mariosofmahopac/" 
+        class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Mariosofmahopac/">Marios Restaurant &amp; Pizza</a></blockquote>
       </div>
     </div>
   </div>
