--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,22 +1,22 @@
 <div class="row">    
-  <div class="col">
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(206, 159, 3)">
+
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(206, 159, 3); width: 1140px; border-bottom: 3px solid">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" style="color: rgb(23, 151, 33); font-weight: bold;" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" style="color: black; font-weight: bold;" routerLink="/home">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: rgb(23, 151, 33); font-weight: bold;" href="#">Menu</a>
+            <a class="nav-link" style="color: black; font-weight: bold;" routerLink="/menu">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: rgb(23, 151, 33); font-weight: bold;" href="#">About</a>
+            <a class="nav-link" style="color: black; font-weight: bold;" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color: rgb(23, 151, 33); font-weight: bold;" href="#">Photos</a>
+            <a class="nav-link" style="color: black; font-weight: bold;" href="#">Photos</a>
           </li>
         </ul>
         <ul class="form-inline my-2 my-lg-0 ml-auto">
@@ -24,5 +24,5 @@
         </ul>
       </div>
     </nav>
-  </div>
+  
 </div>
