footer, order buttons, menu style changes

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -6,7 +6,7 @@
         <div class="card-body">
           <h5 class="card-title">Order Online!</h5>
           <p class="card-text">Choose from over a dozen different Wood-Fired Neapolitan Pizzas</p>
-          <a href="#" class="btn btn-success">Order Now</a>
+          <a href="https://order.menudrive.com/mariosristoranteandpizza" class="btn btn-success" target="_blank">Order Now</a>
         </div>
       </div>
     </div>
@@ -47,7 +47,7 @@
       <div class="fb-page" data-href="https://www.facebook.com/Mariosofmahopac/" data-width= "318px"
         data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" 
         data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Mariosofmahopac/" 
-        class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Mariosofmahopac/">Marios Restaurant &amp; Pizza</a></blockquote>
+        class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Mariosofmahopac/">Mario's Restaurant &amp; Pizza</a></blockquote>
       </div>
     </div>
   </div>
