--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -40,12 +40,14 @@
             bottom: 0px;
             right: 0;
             font-weight: bold;
+            font-size: 20px;
           }
           .description {
             margin-top: 5px;
             font-style: italic;
             display: inline-block;
             max-width: 50%;
+            font-weight: 800;
           }
           hr {
             border: none;
