--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -20,7 +20,7 @@
           </li>
         </ul>
         <ul class="form-inline my-2 my-lg-0 ml-auto">
-            <button class="btn btn-success my-2 my-sm-0" id="order" type="submit">Order</button>
+            <a href="https://order.menudrive.com/mariosristoranteandpizza" target="_blank"><button class="btn btn-success my-2 my-sm-0" id="order" type="submit">Order</button></a>
         </ul>
       </div>
     </nav>
